--- a/retry-fluent-spring7/pom.xml
+++ b/retry-fluent-spring7/pom.xml
@@ -44,6 +44,7 @@
             <groupId>dev.stockman</groupId>
             <artifactId>retry-fluent-api</artifactId>
             <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
